; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/sbus/char/extr_bbc_envctrl.c_maybe_new_fan_speeds.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/sbus/char/extr_bbc_envctrl.c_maybe_new_fan_speeds.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bbc_fan_control = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bbc_fan_control*)* @maybe_new_fan_speeds to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @maybe_new_fan_speeds(%struct.bbc_fan_control* %0) #0 {
  %2 = alloca %struct.bbc_fan_control*, align 8
  %3 = alloca i32, align 4
  store %struct.bbc_fan_control* %0, %struct.bbc_fan_control** %2, align 8
  %4 = load %struct.bbc_fan_control*, %struct.bbc_fan_control** %2, align 8
  %5 = call i32 @maybe_new_ambient_fan_speed(%struct.bbc_fan_control* %4)
  store i32 %5, i32* %3, align 4
  %6 = load %struct.bbc_fan_control*, %struct.bbc_fan_control** %2, align 8
  %7 = call i32 @maybe_new_cpu_fan_speed(%struct.bbc_fan_control* %6)
  %8 = load i32, i32* %3, align 4
  %9 = or i32 %8, %7
  store i32 %9, i32* %3, align 4
  %10 = load i32, i32* %3, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %15

12:                                               ; preds = %1
  %13 = load %struct.bbc_fan_control*, %struct.bbc_fan_control** %2, align 8
  %14 = call i32 @set_fan_speeds(%struct.bbc_fan_control* %13)
  br label %15

15:                                               ; preds = %12, %1
  ret void
}

declare dso_local i32 @maybe_new_ambient_fan_speed(%struct.bbc_fan_control*) #1

declare dso_local i32 @maybe_new_cpu_fan_speed(%struct.bbc_fan_control*) #1

declare dso_local i32 @set_fan_speeds(%struct.bbc_fan_control*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
